--- a/public/css/style.css
+++ b/public/css/style.css
@@ -44,6 +44,7 @@ button {
 label {
   display: block;
   margin-top: 10px;
+  font-weight: bold;
 }
 
 input,
@@ -75,16 +76,19 @@ footer {
 }
 
 hr {
-  height: 2px;
+  height: 1px;
   color: rgb(0, 0, 0);
   background-color: rgb(0, 0, 0);
   margin: 10px 10px;
-  border: none;
-  border-top: 1px solid #ccc;
 }
 
 .delete-checkbox {
   position: absolute;
   top: 10;
   left: 10;
+}
+
+strong{
+  display: block;
+  margin-top: 10px;
 }
